welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: value vuBiscuit
  var vuBiscuit():Boolean=false
      ^Program:8: error: not found: value vuBiscuit
      vuBiscuit()=true
      ^Program:10: error: not found: value vuBiscuit
      vuBiscuit()=false
      ^Program:14: error: not found: value vuBiscuit
  return vuBiscuit()
         ^